<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:overScrollMode="never">

    <!--这里都可设置为动态加载-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/account_bg">

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:lineSpacingMultiplier="1.5"
                    android:maxEms="5"
                    android:singleLine="true"
                    android:text="m15622"
                    android:textColor="#353F49"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/user_intro"
                    app:layout_constraintStart_toStartOf="@+id/user_intro"/>

                <TextView
                    android:id="@+id/user_intro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/user_intro"
                    android:textColor="@color/text_color"
                    app:layout_constraintBottom_toTopOf="@+id/mine_btn"
                    app:layout_constraintStart_toStartOf="parent"/>

                <ImageView
                    android:id="@+id/right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/ic_right"
                    app:layout_constraintBottom_toBottomOf="@+id/user_intro"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/user_name" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@drawable/avatar_teacher_default"
                    app:layout_constraintBottom_toBottomOf="@+id/right"
                    app:layout_constraintEnd_toStartOf="@+id/right"
                    app:layout_constraintTop_toTopOf="@+id/right"
                    android:layout_marginRight="20dp" />

                <LinearLayout
                    android:id="@+id/mine_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_mine_address"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:text="@string/mine_address"
                        android:textColor="@color/text_color"/>

                    <TextView
                        android:id="@+id/icon_cacheRecord"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_mine_download"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:text="@string/mine_download"
                        android:textColor="@color/text_color"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_mine_key_course"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:text="@string/mine_course"
                        android:textColor="@color/text_color"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_mine_order"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:text="@string/mine_order"
                        android:textColor="@color/text_color"/>


                </LinearLayout>
            </android.support.constraint.ConstraintLayout>

            <!--<GridLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"></GridLayout>-->

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/coupon"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:foreground="?attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/mine_coupon"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp" />

            <ImageView
                android:id="@+id/item_coupon_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_right"
                android:layout_alignParentRight="true" />

            <TextView
                android:id="@+id/item_coupon_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="#F87D41"
                android:layout_toLeftOf="@+id/item_coupon_right"
                android:layout_marginRight="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="#eaeaea"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/group_booking"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:foreground="?attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/mine_group_booking"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/item_group_booking_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_right"/>

            <TextView
                android:id="@+id/item_group_booking_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/serialType_price_color"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/item_group_booking_right" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="#eaeaea"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/counsel"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:foreground="?attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:text="@string/mine_counsel"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp" />

            <ImageView
                android:id="@+id/item_counsel_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_right"
                android:layout_alignParentRight="true" />

            <TextView
                android:id="@+id/item_counsel_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/item_counsel_right"
                android:text="@string/mine_counsel_time"
                android:textColor="#A5A9AD"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/item_counsel_right" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="#eaeaea"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/service"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:foreground="?attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:text="@string/mine_service"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp" />

            <ImageView
                android:id="@+id/item_service_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_right"
                android:layout_alignParentRight="true" />

            <TextView
                android:id="@+id/item_service_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/item_service_right"
                android:text="@string/mine_counsel_time"
                android:textColor="#A5A9AD"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/item_service_right" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="#eaeaea"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/setting"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:foreground="?attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/mine_setting"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_alignParentLeft="true" />

            <ImageView
                android:id="@+id/item_setting_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_right"/>

            <TextView
                android:id="@+id/item_setting_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/item_setting_right"
                android:textColor="@color/serialType_price_color"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/item_setting_right" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="#eaeaea"/>
        </RelativeLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>